Sat May 18 16:53:06 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* k5-int.h: Add krb5_seteuid

Tue May 14 20:29:09 1996  Richard Basch  <basch@lehman.com>

	* krb5.hin: replaced CKSUMTYPE_SHA_DES3 with CKSUMTYPE_HMAC_SHA

Thu May  9 19:28:48 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* k5-int.h: Added new field values for ap_req_sumtype and
	 	safe_sumtype.  Added new convenience function for
		verifying magic numbers: KRB5_VERIFY_MAGIC.

	* krb5.hin (krb5_auth_con_set_req_cksumtype,
	 	krb5_auth_con_set_safe_cksumtype): Added prototypes of
		new functions, to replace old krb5_auth_con_setcksumtype.

Fri May 10 01:26:24 1996  Richard Basch  <basch@lehman.com>

	* k5-int.h krb5.hin: Replaced 3des-md5 with 3des-sha.

Tue May  7 17:19:17 1996  Richard Basch  <basch@lehman.com>

	* k5-int.h: We are providing 3DES routines in libcrypto, too...

Thu May  2 18:41:00 1996  Richard Basch  <basch@lehman.com>

	* krb5.hin: krb5_init_random_key & krb5_finish_random_key now
		pass the eblock to the underlying crypto routine.

Fri May  3 00:26:47 1996  Mark Eichin  <eichin@cygnus.com>

	* krb5.hin
	(krb5_get_credentials_validate): declaration for new function.
	(krb5_get_cred_from_kdc_validate): ditto.

Thu May  2 22:52:14 1996  Mark Eichin  <eichin@cygnus.com>

	* krb5.hin (krb5_rd_req_decoded_anyflag): declaration for new
	function, see rd_req_dec.c for details.

Tue Apr 30 14:51:55 1996    <tytso@rsts-11.mit.edu>

	* k5-int.h: Fix Windows definition of PROVIDE_DES_CBC_RAW so that
		the raw DES cryptosystem is properly included.  Removed
		Macintosh definitions of PROVIDE_* since that is done in
		mac/libaries/KerberosHeaders.h.

Thu Apr 11 23:50:24 1996  Theodore Y. Ts'o  <tytso@dcl>

	* krb5.hin (krb5_x, krb5_xc): Fix wrapper macros so they don't
		try to dereference a function pointer as a data value.
		This doesn't work if you're using hpux cc, since functions
		are aligned on 2-byte boundaries, but data has to be