@@ -1,3 +1,8 @@
+Mon May 20 02:51:06 1996  Sam Hartman  <hartmans@mit.edu>
+
+	* k5-int.h: Ultrix CC wants krb5_seteuid to take uid_t so that the
+ 	type can be promoted from a short.
+
 Sat May 18 16:53:06 1996  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* k5-int.h: Add krb5_seteuid
